Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,64 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Yamal mừng bàn đáp trả danh thủ Hà Lan",
+    "content": "Trong trận đấu giữa Tây Ban Nha và Hà Lan tại tứ kết Nations League, tiền vệ 17 tuổi Lamine Yamal đã ghi bàn và có màn ăn mừng gây chú ý khi kéo quần xuống, được cho là để đáp trả chỉ trích từ Rafael van der Vaart. Trước đó, Van der Vaart đã chỉ trích Yamal vì màn trình diễn không ấn tượng ở trận lượt đi. Sau trận hòa 3-3 và thắng 5-4 trong loạt sút luân lưu, Tây Ban Nha đã giành quyền vào bán kết gặp Pháp.",
+    "link": "https://vnexpress.net/yamal-mung-ban-dap-tra-danh-thu-ha-lan-4865071.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Lamine Yamal đã làm gì để đáp trả chỉ trích từ Van der Vaart?",
+    "answers": [
+      {
+        "text": "Kéo quần xuống khi ăn mừng bàn thắng",
+        "correct": true
+      },
+      {
+        "text": "Chạy ra ngoài sân",
+        "correct": false
+      },
+      {
+        "text": "Khóc khi ghi bàn",
+        "correct": false
+      },
+      {
+        "text": "Trả lời phỏng vấn ngay sau trận",
+        "correct": false
+      },
+      {
+        "text": "Đề nghị không nhận lời chỉ trích",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Gen Z - thế hệ liên tục bị từ chối",
+    "content": "Gen Z, thế hệ sinh ra trong thời kỳ đại dịch và sự phát triển nhanh chóng của công nghệ, đang phải đối mặt với áp lực thành công và tỉ lệ bị từ chối cao hơn so với các thế hệ trước. Từ việc tìm kiếm việc làm đến hẹn hò, Gen Z trải qua nhiều lần từ chối và cảm thấy cô đơn, kiệt sức hơn. Họ có thể nộp hàng trăm đơn xin việc nhưng vẫn gặp khó khăn trong việc tìm kiếm cơ hội phù hợp. Tuy nhiên, một số người trẻ lại tìm thấy động lực từ những lời từ chối này và chuyển hướng sang các dự án cá nhân hoặc kinh doanh mới.",
+    "link": "https://vnexpress.net/gen-z-the-he-lien-tuc-bi-tu-choi-4865139.html",
+    "cat": "giai-tri",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Giới trẻ Gen Z đang phải đối mặt với những thách thức gì?",
+    "answers": [
+      {
+        "text": "Họ thường xuyên bị từ chối trong công việc và tình cảm.",
+        "correct": true
+      },
+      {
+        "text": "Họ luôn tìm kiếm công việc hoàn hảo mà không nộp đơn.",
+        "correct": false
+      },
+      {
+        "text": "Họ không gặp khó khăn trong việc tìm việc làm.",
+        "correct": false
+      },
+      {
+        "text": "Họ không quan tâm đến việc hẹn hò.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tuchel chê Rashford, Foden",
     "content": "HLV Thomas Tuchel đã chỉ trích Marcus Rashford và Phil Foden vì không để lại ấn tượng trong trận thắng 2-0 của tuyển Anh trước Albania ở vòng loại World Cup 2026. Dù có chiến thắng trong trận ra mắt, Tuchel cho rằng đội bóng thiếu kỷ luật và hai cầu thủ này không tạo được ảnh hưởng như mong đợi. Ông hy vọng sẽ cải thiện tình hình trong những trận đấu tiếp theo và nhấn mạnh tầm quan trọng của việc tận dụng cơ hội từ những pha chạy chỗ.",
     "link": "https://vnexpress.net/tuchel-che-rashford-foden-4865090.html",
@@ -1110,33 +1168,6 @@
     ]
   },
   {
-    "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
-    "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
-    "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Skoda Kushaq bắt đầu nhận cọc từ thời điểm nào?",
-    "answers": [
-      {
-        "text": "Giữa tháng 3",
-        "correct": true
-      },
-      {
-        "text": "Đầu tháng 4",
-        "correct": false
-      },
-      {
-        "text": "Cuối tháng 2",
-        "correct": false
-      },
-      {
-        "text": "Giữa tháng 1",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 hiểu lầm thường gặp về đường",
     "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
     "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
@@ -1159,6 +1190,33 @@
       },
       {
         "text": "Chỉ ăn đường một lần trong ngày là an toàn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
+    "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
+    "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Skoda Kushaq bắt đầu nhận cọc từ thời điểm nào?",
+    "answers": [
+      {
+        "text": "Giữa tháng 3",
+        "correct": true
+      },
+      {
+        "text": "Đầu tháng 4",
+        "correct": false
+      },
+      {
+        "text": "Cuối tháng 2",
+        "correct": false
+      },
+      {
+        "text": "Giữa tháng 1",
         "correct": false
       }
     ]
@@ -1991,6 +2049,60 @@
     ]
   },
   {
+    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
+    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
+    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
+    "answers": [
+      {
+        "text": "Vợ ông đang trong tình trạng nguy kịch.",
+        "correct": true
+      },
+      {
+        "text": "Vợ ông đã hồi phục hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
+    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
+    "answers": [
+      {
+        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
+        "correct": true
+      },
+      {
+        "text": "Lễ hội mùa xuân",
+        "correct": false
+      },
+      {
+        "text": "Cuộc thi thể thao quốc gia",
+        "correct": false
+      },
+      {
+        "text": "Ngày Quốc tế Phụ nữ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
     "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
     "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
@@ -2044,60 +2156,6 @@
       },
       {
         "text": "10 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
-    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
-    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
-    "answers": [
-      {
-        "text": "Vợ ông đang trong tình trạng nguy kịch.",
-        "correct": true
-      },
-      {
-        "text": "Vợ ông đã hồi phục hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
-    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
-    "answers": [
-      {
-        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
-        "correct": true
-      },
-      {
-        "text": "Lễ hội mùa xuân",
-        "correct": false
-      },
-      {
-        "text": "Cuộc thi thể thao quốc gia",
-        "correct": false
-      },
-      {
-        "text": "Ngày Quốc tế Phụ nữ",
         "correct": false
       }
     ]
