--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Tay vợt Philippines tạo địa chấn ở Miami Mở rộng",
+    "content": "Tay vợt trẻ Philippines, Alexandra Eala, đã gây bất ngờ lớn khi đánh bại ĐKVĐ Australia Mở rộng Madison Keys với tỉ số 6-4, 6-2 tại vòng ba Miami Mở rộng. Đây được xem là chiến thắng lớn nhất trong sự nghiệp của Eala, khi cô trở thành tay vợt Philippines đầu tiên thắng một đối thủ trong top 10 thế giới từ khi bảng điểm được ra đời. Eala sẽ đối đầu với Paula Badosa ở vòng bốn, trong khi Badosa đang gặp vấn đề về thể lực.",
+    "link": "https://vnexpress.net/tay-vot-philippines-tao-dia-chan-o-miami-mo-rong-4865068.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Alexandra Eala đã thắng ai tại Miami Mở rộng?",
+    "answers": [
+      {
+        "text": "Madison Keys",
+        "correct": true
+      },
+      {
+        "text": "Paula Badosa",
+        "correct": false
+      },
+      {
+        "text": "Clara Tauson",
+        "correct": false
+      },
+      {
+        "text": "Ben Shelton",
+        "correct": false
+      },
+      {
+        "text": "Mirra Andreeva",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Yamal mừng bàn đáp trả danh thủ Hà Lan",
     "content": "Trong trận đấu giữa Tây Ban Nha và Hà Lan tại tứ kết Nations League, tiền vệ 17 tuổi Lamine Yamal đã ghi bàn và có màn ăn mừng gây chú ý khi kéo quần xuống, được cho là để đáp trả chỉ trích từ Rafael van der Vaart. Trước đó, Van der Vaart đã chỉ trích Yamal vì màn trình diễn không ấn tượng ở trận lượt đi. Sau trận hòa 3-3 và thắng 5-4 trong loạt sút luân lưu, Tây Ban Nha đã giành quyền vào bán kết gặp Pháp.",
     "link": "https://vnexpress.net/yamal-mung-ban-dap-tra-danh-thu-ha-lan-4865071.html",
@@ -610,33 +641,6 @@
     ]
   },
   {
-    "title": "Cộng đồng 'dậy sóng' vì huy chương VnExpress Marathon Huế",
-    "content": "Cộng đồng chạy bộ đang rất hào hứng với thiết kế huy chương VnExpress Marathon Huế 2025, lấy cảm hứng từ chim phượng hoàng và cây ngô đồng cổ thụ, kết hợp với các biểu tượng nổi bật của thành phố Huế. Nhiều runner cho rằng thiết kế này đẹp và tạo động lực cho họ tham gia giải, với nhiều ý kiến khen ngợi trên mạng xã hội. Tuy nhiên, cũng có một số runner góp ý về tính chính xác trong phối cảnh của huy chương.",
-    "link": "https://vnexpress.net/cong-dong-day-song-vi-huy-chuong-vnexpress-marathon-hue-4864994.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Tại sao cộng đồng runner lại hào hứng với huy chương VnExpress Marathon Huế 2025?",
-    "answers": [
-      {
-        "text": "Vì thiết kế huy chương đẹp và mang tính biểu tượng của Huế.",
-        "correct": true
-      },
-      {
-        "text": "Vì có nhiều giải thưởng hấp dẫn đi kèm.",
-        "correct": false
-      },
-      {
-        "text": "Vì giải chạy có nhiều runner tham gia.",
-        "correct": false
-      },
-      {
-        "text": "Vì huy chương được làm từ chất liệu đặc biệt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
     "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
     "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
@@ -659,6 +663,33 @@
       },
       {
         "text": "Mì tôm, snack, kẹo",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cộng đồng 'dậy sóng' vì huy chương VnExpress Marathon Huế",
+    "content": "Cộng đồng chạy bộ đang rất hào hứng với thiết kế huy chương VnExpress Marathon Huế 2025, lấy cảm hứng từ chim phượng hoàng và cây ngô đồng cổ thụ, kết hợp với các biểu tượng nổi bật của thành phố Huế. Nhiều runner cho rằng thiết kế này đẹp và tạo động lực cho họ tham gia giải, với nhiều ý kiến khen ngợi trên mạng xã hội. Tuy nhiên, cũng có một số runner góp ý về tính chính xác trong phối cảnh của huy chương.",
+    "link": "https://vnexpress.net/cong-dong-day-song-vi-huy-chuong-vnexpress-marathon-hue-4864994.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Tại sao cộng đồng runner lại hào hứng với huy chương VnExpress Marathon Huế 2025?",
+    "answers": [
+      {
+        "text": "Vì thiết kế huy chương đẹp và mang tính biểu tượng của Huế.",
+        "correct": true
+      },
+      {
+        "text": "Vì có nhiều giải thưởng hấp dẫn đi kèm.",
+        "correct": false
+      },
+      {
+        "text": "Vì giải chạy có nhiều runner tham gia.",
+        "correct": false
+      },
+      {
+        "text": "Vì huy chương được làm từ chất liệu đặc biệt.",
         "correct": false
       }
     ]
@@ -2399,6 +2430,37 @@
     ]
   },
   {
+    "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
+    "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
+    "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Nguyễn Nguyệt đã giảm bao nhiêu kg trong quá trình thay đổi chế độ ăn uống?",
+    "answers": [
+      {
+        "text": "27 kg",
+        "correct": true
+      },
+      {
+        "text": "15 kg",
+        "correct": false
+      },
+      {
+        "text": "35 kg",
+        "correct": false
+      },
+      {
+        "text": "20 kg",
+        "correct": false
+      },
+      {
+        "text": "10 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
     "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
     "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
@@ -2448,37 +2510,6 @@
       },
       {
         "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
-    "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
-    "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Nguyễn Nguyệt đã giảm bao nhiêu kg trong quá trình thay đổi chế độ ăn uống?",
-    "answers": [
-      {
-        "text": "27 kg",
-        "correct": true
-      },
-      {
-        "text": "15 kg",
-        "correct": false
-      },
-      {
-        "text": "35 kg",
-        "correct": false
-      },
-      {
-        "text": "20 kg",
-        "correct": false
-      },
-      {
-        "text": "10 kg",
         "correct": false
       }
     ]
@@ -2627,28 +2658,28 @@
     ]
   },
   {
-    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
-    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
-    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
+    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
+    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
+    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
     "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
     "answers": [
       {
-        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
+        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
         "correct": true
       },
       {
-        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
+        "text": "Để xây dựng một cầu mới.",
         "correct": false
       },
       {
-        "text": "Không có sự thay đổi nào đáng kể",
+        "text": "Để tổ chức lễ hội âm nhạc.",
         "correct": false
       },
       {
-        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
+        "text": "Vì lý do an ninh quốc gia.",
         "correct": false
       }
     ]
@@ -2708,28 +2739,28 @@
     ]
   },
   {
-    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
-    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
-    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
+    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
+    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
+    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
     "cat": "thoi-su",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
     "answers": [
       {
-        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
+        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
         "correct": true
       },
       {
-        "text": "Để xây dựng một cầu mới.",
+        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
         "correct": false
       },
       {
-        "text": "Để tổ chức lễ hội âm nhạc.",
+        "text": "Không có sự thay đổi nào đáng kể",
         "correct": false
       },
       {
-        "text": "Vì lý do an ninh quốc gia.",
+        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
         "correct": false
       }
     ]
@@ -3674,6 +3705,33 @@
     ]
   },
   {
+    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
+    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
+    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
+    "answers": [
+      {
+        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
+        "correct": true
+      },
+      {
+        "text": "Vì sinh viên không thích nghỉ Tết.",
+        "correct": false
+      },
+      {
+        "text": "Vì sinh viên đang bận học kỳ cuối.",
+        "correct": false
+      },
+      {
+        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hầu hết mọi người sẽ nhiễm HPV trong cuộc đời",
     "content": "Hầu hết mọi người sẽ nhiễm virus HPV trong cuộc đời, nhưng chỉ một số ít ca có thể dẫn đến ung thư. Virus HPV gồm hơn 200 chủng, trong đó có những chủng nguy cơ thấp không gây ung thư và thường tự khỏi. Tuy nhiên, các chủng nguy cơ cao có thể gây ra 5% tổng số ca ung thư toàn cầu, đặc biệt là ung thư cổ tử cung. Vaccine HPV có thể ngăn ngừa hơn 90% các bệnh ung thư do virus này gây ra, nhưng tỷ lệ tiêm vaccine ở Việt Nam còn thấp.",
     "link": "https://vnexpress.net/hau-het-moi-nguoi-se-nhiem-hpv-trong-cuoc-doi-4864744.html",
@@ -3700,33 +3758,6 @@
       },
       {
         "text": "Ung thư đại tràng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
-    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
-    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
-    "answers": [
-      {
-        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
-        "correct": true
-      },
-      {
-        "text": "Vì sinh viên không thích nghỉ Tết.",
-        "correct": false
-      },
-      {
-        "text": "Vì sinh viên đang bận học kỳ cuối.",
-        "correct": false
-      },
-      {
-        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
         "correct": false
       }
     ]
@@ -3959,33 +3990,6 @@
       },
       {
         "text": "Vì cô có gia đình ở Italy.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nga lên tiếng khi Mỹ ngỏ ý muốn tiếp quản nhà máy điện hạt nhân Ukraine",
-    "content": "Moscow đã có phản ứng mạnh mẽ trước đề nghị của Tổng thống Mỹ Donald Trump về việc Mỹ tiếp quản nhà máy điện hạt nhân Zaporizhia ở Ukraine, nhấn mạnh rằng chỉ có Nga mới có quyền sở hữu và vận hành cơ sở này. Ông Yury Chernichyuk, người đứng đầu nhà máy, khẳng định rằng ZNPP thuộc về Liên bang Nga và sẽ được quản lý theo luật pháp Nga. Đề nghị này được đưa ra trong bối cảnh cuộc xung đột giữa Nga và Ukraine vẫn đang căng thẳng, với nhiều lo ngại về an ninh của nhà máy điện hạt nhân lớn nhất châu Âu.",
-    "link": "https://dantri.com.vn/the-gioi/nga-len-tieng-khi-my-ngo-y-muon-tiep-quan-nha-may-dien-hat-nhan-ukraine-20250323134859977.htm",
-    "cat": "the-gioi",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Mỹ có ý định gì đối với nhà máy điện hạt nhân Zaporizhia ở Ukraine?",
-    "answers": [
-      {
-        "text": "Mỹ muốn tiếp quản nhà máy điện hạt nhân Zaporizhia",
-        "correct": true
-      },
-      {
-        "text": "Mỹ muốn bán nhà máy cho Ukraine",
-        "correct": false
-      },
-      {
-        "text": "Mỹ muốn phá hủy nhà máy",
-        "correct": false
-      },
-      {
-        "text": "Mỹ không quan tâm đến nhà máy điện hạt nhân",
         "correct": false
       }
     ]
