--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Fernandes mừng trước khi Ronaldo sút phạt đền hỏng",
+    "content": "Trong trận tứ kết Nations League giữa Bồ Đào Nha và Đan Mạch vào ngày 23/3/2025, Bruno Fernandes đã giơ tay ăn mừng trước khi Cristiano Ronaldo thực hiện quả phạt đền. Mặc dù Fernandes tin rằng Ronaldo sẽ ghi bàn, cú sút của Ronaldo lại bị thủ môn Kasper Schmeichel cản phá. Fernandes và Ronaldo đều tiếc nuối khi không thể chuyển hóa cơ hội thành bàn thắng, trong khi nhiều người hâm mộ đã kêu gọi Fernandes nên thực hiện các cú sút phạt đền thay cho Ronaldo.",
+    "link": "https://vnexpress.net/fernandes-mung-truoc-khi-ronaldo-sut-phat-den-hong-4865147.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao Bruno Fernandes lại ăn mừng trước khi Ronaldo sút phạt đền?",
+    "answers": [
+      {
+        "text": "Vì anh tin Ronaldo sẽ ghi bàn từ phạt đền.",
+        "correct": true
+      },
+      {
+        "text": "Vì anh muốn thể hiện sự tự tin.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh muốn tạo không khí vui vẻ cho đội.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh không nghĩ Ronaldo sẽ sút hỏng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hồ gần cạn kiệt, dân góp tiền mua ống 'tăng bo' nước về cứu cây trồng",
     "content": "Do hạn hán kéo dài, nhiều hồ chứa nước tại xã Đắk Lao, Đắk Nông đã cạn kiệt, khiến người dân phải góp tiền mua ống dẫn nước để cứu cây trồng. Gần 40 hộ dân đã cùng nhau đóng góp hơn 1 tỷ đồng để lắp đặt hệ thống ống từ hồ Đắk Ken, nhằm cung cấp nước cho hơn 2.000 ha cây cà phê, hồ tiêu, và sầu riêng. Chính quyền địa phương cũng đang triển khai các biện pháp cấp nước tạm thời để hỗ trợ người dân trong bối cảnh khô hạn nghiêm trọng.",
     "link": "https://tuoitre.vn/ho-gan-can-kiet-dan-gop-tien-mua-ong-tang-bo-nuoc-ve-cuu-cay-trong-20250324131137749.htm",
@@ -827,60 +854,6 @@
     ]
   },
   {
-    "title": "6 món hỗ trợ cải thiện tiêu hóa",
-    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
-    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
-    "answers": [
-      {
-        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
-        "correct": true
-      },
-      {
-        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
-        "correct": false
-      },
-      {
-        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
-        "correct": false
-      },
-      {
-        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Uống nước kiềm có phòng ngừa ung thư?",
-    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
-    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
-    "answers": [
-      {
-        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
-        "correct": true
-      },
-      {
-        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
-        "correct": false
-      },
-      {
-        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
-        "correct": false
-      },
-      {
-        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 sai lầm phổ biến khi đi bộ gây đau và tăng cân",
     "content": "Chuyên gia Joanna Hall chỉ ra bốn sai lầm phổ biến khi đi bộ có thể dẫn đến đau và tăng cân. Những sai lầm này bao gồm sử dụng sai nhóm cơ, đi bộ bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay. Việc lạm dụng cơ gấp hông, đi bằng bàn chân phẳng và tư thế cúi đầu gây áp lực lên cột sống và khớp, trong khi không vận động tay làm giảm hiệu quả tập luyện. Để cải thiện, cần chú ý đến cách đi bộ và tư thế cơ thể.",
     "link": "https://vnexpress.net/4-sai-lam-pho-bien-khi-di-bo-gay-dau-va-tang-can-4864895.html",
@@ -934,6 +907,60 @@
       },
       {
         "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 món hỗ trợ cải thiện tiêu hóa",
+    "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
+    "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những món nào hỗ trợ cải thiện tiêu hóa?",
+    "answers": [
+      {
+        "text": "Sữa chua, rau xanh đậm, hạt chia, táo, rau thì là, đu đủ",
+        "correct": true
+      },
+      {
+        "text": "Cơm trắng, bánh mì, thịt đỏ, sữa tươi, nước ngọt",
+        "correct": false
+      },
+      {
+        "text": "Cá hồi, mỳ Ý, khoai tây, trái cây khô",
+        "correct": false
+      },
+      {
+        "text": "Thịt gà, xôi, kem, trà sữa, bánh ngọt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Uống nước kiềm có phòng ngừa ung thư?",
+    "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
+    "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Uống nước kiềm có thật sự phòng ngừa ung thư không?",
+    "answers": [
+      {
+        "text": "Không, uống nước kiềm không phòng ngừa được ung thư.",
+        "correct": true
+      },
+      {
+        "text": "Có, nước kiềm giúp ngăn ngừa ung thư hiệu quả.",
+        "correct": false
+      },
+      {
+        "text": "Nước kiềm làm giảm triệu chứng ung thư.",
+        "correct": false
+      },
+      {
+        "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
         "correct": false
       }
     ]
@@ -2071,28 +2098,28 @@
     ]
   },
   {
-    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
-    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
-    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
-    "cat": "gia-dinh",
-    "positivity": 3,
+    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
+    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
+    "cat": "thoi-su",
+    "positivity": 8,
     "importance": 7,
-    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
+    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
     "answers": [
       {
-        "text": "Vợ ông đang trong tình trạng nguy kịch.",
+        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
         "correct": true
       },
       {
-        "text": "Vợ ông đã hồi phục hoàn toàn.",
+        "text": "Lễ hội mùa xuân",
         "correct": false
       },
       {
-        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
+        "text": "Cuộc thi thể thao quốc gia",
         "correct": false
       },
       {
-        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
+        "text": "Ngày Quốc tế Phụ nữ",
         "correct": false
       }
     ]
@@ -2129,28 +2156,28 @@
     ]
   },
   {
-    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
-    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
-    "cat": "thoi-su",
-    "positivity": 8,
+    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
+    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
+    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
     "importance": 7,
-    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
+    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
     "answers": [
       {
-        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
+        "text": "Vợ ông đang trong tình trạng nguy kịch.",
         "correct": true
       },
       {
-        "text": "Lễ hội mùa xuân",
+        "text": "Vợ ông đã hồi phục hoàn toàn.",
         "correct": false
       },
       {
-        "text": "Cuộc thi thể thao quốc gia",
+        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
         "correct": false
       },
       {
-        "text": "Ngày Quốc tế Phụ nữ",
+        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
         "correct": false
       }
     ]
@@ -3569,64 +3596,6 @@
       },
       {
         "text": "25-3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hôn nhân viên mãn của người phụ nữ với chồng kém 34 tuổi",
-    "content": "Christine Haycox, 74 tuổi, đã tìm thấy hạnh phúc bên chồng kém 34 tuổi, Hamza Dridi, 40 tuổi, sau khi họ gặp nhau qua các buổi học tiếng Anh trực tuyến. Christine đã bay từ Anh sang Tunisia để thăm Hamza và quyết định ở lại đây. Họ đã kết hôn vào tháng 12/2020 và Christine đã cải sang đạo Hồi. Mặc dù có sự chênh lệch tuổi tác và khoảng cách văn hóa, cả hai đều cảm thấy hòa hợp và được gia đình, bạn bè ủng hộ mối quan hệ này.",
-    "link": "https://vnexpress.net/hon-nhan-vien-man-cua-nguoi-phu-nu-voi-chong-kem-34-tuoi-4863746.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Hôn nhân của Christine và Hamza có những thử thách nào không?",
-    "answers": [
-      {
-        "text": "Có, họ phải đối mặt với sự hoài nghi từ người khác.",
-        "correct": true
-      },
-      {
-        "text": "Không, mọi người đều ủng hộ họ.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng họ không gặp bất kỳ khó khăn nào.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ từ gia đình họ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Porsche 911 2025 ra mắt, giá từ 8,87 tỷ đồng",
-    "content": "Porsche vừa ra mắt mẫu xe thể thao 911 mới (mã 992.2) tại Bảo tàng Mỹ Thuật Việt Nam với giá khởi điểm từ 8,87 tỷ đồng. Mẫu xe này có một số cải tiến nhỏ ở cản trước và sau, đồng thời bổ sung công nghệ hybrid hiệu suất cao. Hai biến thể 911 Carrera và 911 Cabriolet được trưng bày, với động cơ boxer 3 lít và công suất lên tới 533 mã lực ở phiên bản Carrera GTS. Khách hàng có thể đặt hàng với thời gian chờ từ 6-8 tháng.",
-    "link": "https://vnexpress.net/porsche-911-2025-ra-mat-gia-tu-8-87-ty-dong-4864694.html",
-    "cat": "oto-xe-may",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Mẫu xe Porsche 911 2025 có giá khởi điểm bao nhiêu?",
-    "answers": [
-      {
-        "text": "8,87 tỷ đồng",
-        "correct": true
-      },
-      {
-        "text": "9,5 tỷ đồng",
-        "correct": false
-      },
-      {
-        "text": "10 tỷ đồng",
-        "correct": false
-      },
-      {
-        "text": "7,5 tỷ đồng",
-        "correct": false
-      },
-      {
-        "text": "11 tỷ đồng",
         "correct": false
       }
     ]
