Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -525,6 +525,33 @@
     ]
   },
   {
+    "title": "Những câu hỏi về vaccine não mô cầu nhóm B và BC",
+    "content": "Bài viết cung cấp thông tin về hai loại vaccine não mô cầu nhóm B và BC, bao gồm hiệu quả phòng bệnh, công nghệ sản xuất và lịch tiêm. Vaccine Bexsero từ Italy và vaccine VA-Mengoc-BC từ Cuba có cách tiếp cận sản xuất khác nhau, với vaccine Bexsero có hiệu quả cao hơn trong việc bảo vệ nhóm B. Ngoài ra, bài viết cũng nhấn mạnh tầm quan trọng của việc tiêm vaccine cho trẻ nhỏ và thanh thiếu niên để phòng ngừa các bệnh liên quan đến não mô cầu.",
+    "link": "https://vnexpress.net/nhung-cau-hoi-ve-vaccine-nao-mo-cau-nhom-b-va-bc-4865161.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Nên tiêm vaccine não mô cầu nhóm B hay BC cho trẻ em?",
+    "answers": [
+      {
+        "text": "Nên tiêm vaccine nhóm B vì hiệu quả phòng bệnh cao hơn.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần tiêm vaccine nhóm BC.",
+        "correct": false
+      },
+      {
+        "text": "Không cần tiêm vaccine nào.",
+        "correct": false
+      },
+      {
+        "text": "Tiêm cả hai loại vaccine đều tốt.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hồ gần cạn kiệt, dân góp tiền mua ống 'tăng bo' nước về cứu cây trồng",
     "content": "Do hạn hán kéo dài, nhiều hồ chứa nước tại xã Đắk Lao, Đắk Nông đã cạn kiệt, khiến người dân phải góp tiền mua ống dẫn nước để cứu cây trồng. Gần 40 hộ dân đã cùng nhau đóng góp hơn 1 tỷ đồng để lắp đặt hệ thống ống từ hồ Đắk Ken, nhằm cung cấp nước cho hơn 2.000 ha cây cà phê, hồ tiêu, và sầu riêng. Chính quyền địa phương cũng đang triển khai các biện pháp cấp nước tạm thời để hỗ trợ người dân trong bối cảnh khô hạn nghiêm trọng.",
     "link": "https://tuoitre.vn/ho-gan-can-kiet-dan-gop-tien-mua-ong-tang-bo-nuoc-ve-cuu-cay-trong-20250324131137749.htm",
@@ -582,6 +609,33 @@
       },
       {
         "text": "Tăng cường lực lượng bộ binh",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sởi tấn công người lớn",
+    "content": "Trong ba tháng đầu năm 2025, Viện Y học nhiệt đới, Bệnh viện Bạch Mai ghi nhận hàng trăm ca sởi ở người lớn, với nhiều trường hợp biến chứng nghiêm trọng. Hầu hết bệnh nhân chưa tiêm vaccine hoặc không tiêm nhắc lại, đặc biệt là những người có bệnh nền như đái tháo đường. Sởi có hệ số lây nhiễm cao và có thể gây ra các biến chứng nguy hiểm nếu không được điều trị kịp thời. Bộ Y tế đã khuyến cáo tiêm vaccine đầy đủ để phòng ngừa bệnh sởi.",
+    "link": "https://vnexpress.net/soi-tan-cong-nguoi-lon-4865133.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Sởi đang tấn công người lớn với những biến chứng gì?",
+    "answers": [
+      {
+        "text": "Nhiều trường hợp biến chứng nặng như suy hô hấp, suy gan",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây sốt nhẹ",
+        "correct": false
+      },
+      {
+        "text": "Không có biến chứng nào",
+        "correct": false
+      },
+      {
+        "text": "Biến chứng chỉ xảy ra ở trẻ em",
         "correct": false
       }
     ]
@@ -811,33 +865,6 @@
     ]
   },
   {
-    "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
-    "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
-    "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những món ăn nhẹ nào giàu canxi giúp trẻ phát triển xương?",
-    "answers": [
-      {
-        "text": "Phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây",
-        "correct": true
-      },
-      {
-        "text": "Cháo thịt, cơm trắng, bánh mì",
-        "correct": false
-      },
-      {
-        "text": "Thịt bò, cá, trứng",
-        "correct": false
-      },
-      {
-        "text": "Mì tôm, snack, kẹo",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cộng đồng 'dậy sóng' vì huy chương VnExpress Marathon Huế",
     "content": "Cộng đồng chạy bộ đang rất hào hứng với thiết kế huy chương VnExpress Marathon Huế 2025, lấy cảm hứng từ chim phượng hoàng và cây ngô đồng cổ thụ, kết hợp với các biểu tượng nổi bật của thành phố Huế. Nhiều runner cho rằng thiết kế này đẹp và tạo động lực cho họ tham gia giải, với nhiều ý kiến khen ngợi trên mạng xã hội. Tuy nhiên, cũng có một số runner góp ý về tính chính xác trong phối cảnh của huy chương.",
     "link": "https://vnexpress.net/cong-dong-day-song-vi-huy-chuong-vnexpress-marathon-hue-4864994.html",
@@ -860,6 +887,33 @@
       },
       {
         "text": "Vì huy chương được làm từ chất liệu đặc biệt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 món ăn nhẹ giàu canxi giúp trẻ phát triển xương",
+    "content": "Bài viết giới thiệu 5 món ăn nhẹ giàu canxi giúp trẻ em phát triển xương chắc khỏe. Các thực phẩm được đề cập bao gồm phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây và đậu phụ. Những món ăn này không chỉ cung cấp canxi mà còn bổ sung thêm vitamin và chất dinh dưỡng cần thiết cho sự phát triển của trẻ.",
+    "link": "https://vnexpress.net/5-mon-an-nhe-giau-canxi-giup-tre-phat-trien-xuong-4865128.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những món ăn nhẹ nào giàu canxi giúp trẻ phát triển xương?",
+    "answers": [
+      {
+        "text": "Phô mai, sữa chua, rau lá xanh, các loại hạt, trái cây",
+        "correct": true
+      },
+      {
+        "text": "Cháo thịt, cơm trắng, bánh mì",
+        "correct": false
+      },
+      {
+        "text": "Thịt bò, cá, trứng",
+        "correct": false
+      },
+      {
+        "text": "Mì tôm, snack, kẹo",
         "correct": false
       }
     ]
@@ -1329,37 +1383,6 @@
     ]
   },
   {
-    "title": "4 sai lầm phổ biến khi đi bộ gây đau và tăng cân",
-    "content": "Chuyên gia Joanna Hall chỉ ra bốn sai lầm phổ biến khi đi bộ có thể dẫn đến đau và tăng cân. Những sai lầm này bao gồm sử dụng sai nhóm cơ, đi bộ bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay. Việc lạm dụng cơ gấp hông, đi bằng bàn chân phẳng và tư thế cúi đầu gây áp lực lên cột sống và khớp, trong khi không vận động tay làm giảm hiệu quả tập luyện. Để cải thiện, cần chú ý đến cách đi bộ và tư thế cơ thể.",
-    "link": "https://vnexpress.net/4-sai-lam-pho-bien-khi-di-bo-gay-dau-va-tang-can-4864895.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những sai lầm nào khi đi bộ có thể gây đau và tăng cân?",
-    "answers": [
-      {
-        "text": "Sử dụng sai nhóm cơ, đi bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay",
-        "correct": true
-      },
-      {
-        "text": "Đi bộ không đủ nhanh",
-        "correct": false
-      },
-      {
-        "text": "Không mang giày thể thao",
-        "correct": false
-      },
-      {
-        "text": "Đi bộ trong thời gian ngắn",
-        "correct": false
-      },
-      {
-        "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Từng mắc quai bị có vô sinh không?",
     "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
     "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
@@ -1436,6 +1459,37 @@
       },
       {
         "text": "Uống nước kiềm có thể thay thế điều trị ung thư.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 sai lầm phổ biến khi đi bộ gây đau và tăng cân",
+    "content": "Chuyên gia Joanna Hall chỉ ra bốn sai lầm phổ biến khi đi bộ có thể dẫn đến đau và tăng cân. Những sai lầm này bao gồm sử dụng sai nhóm cơ, đi bộ bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay. Việc lạm dụng cơ gấp hông, đi bằng bàn chân phẳng và tư thế cúi đầu gây áp lực lên cột sống và khớp, trong khi không vận động tay làm giảm hiệu quả tập luyện. Để cải thiện, cần chú ý đến cách đi bộ và tư thế cơ thể.",
+    "link": "https://vnexpress.net/4-sai-lam-pho-bien-khi-di-bo-gay-dau-va-tang-can-4864895.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những sai lầm nào khi đi bộ có thể gây đau và tăng cân?",
+    "answers": [
+      {
+        "text": "Sử dụng sai nhóm cơ, đi bằng bàn chân thụ động, tư thế đầu không đúng và không vận động tay",
+        "correct": true
+      },
+      {
+        "text": "Đi bộ không đủ nhanh",
+        "correct": false
+      },
+      {
+        "text": "Không mang giày thể thao",
+        "correct": false
+      },
+      {
+        "text": "Đi bộ trong thời gian ngắn",
+        "correct": false
+      },
+      {
+        "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
         "correct": false
       }
     ]
@@ -3875,33 +3929,6 @@
     ]
   },
   {
-    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
-    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
-    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
-    "answers": [
-      {
-        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
-        "correct": true
-      },
-      {
-        "text": "Vì sinh viên không thích nghỉ Tết.",
-        "correct": false
-      },
-      {
-        "text": "Vì sinh viên đang bận học kỳ cuối.",
-        "correct": false
-      },
-      {
-        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hầu hết mọi người sẽ nhiễm HPV trong cuộc đời",
     "content": "Hầu hết mọi người sẽ nhiễm virus HPV trong cuộc đời, nhưng chỉ một số ít ca có thể dẫn đến ung thư. Virus HPV gồm hơn 200 chủng, trong đó có những chủng nguy cơ thấp không gây ung thư và thường tự khỏi. Tuy nhiên, các chủng nguy cơ cao có thể gây ra 5% tổng số ca ung thư toàn cầu, đặc biệt là ung thư cổ tử cung. Vaccine HPV có thể ngăn ngừa hơn 90% các bệnh ung thư do virus này gây ra, nhưng tỷ lệ tiêm vaccine ở Việt Nam còn thấp.",
     "link": "https://vnexpress.net/hau-het-moi-nguoi-se-nhiem-hpv-trong-cuoc-doi-4864744.html",
@@ -3928,6 +3955,33 @@
       },
       {
         "text": "Ung thư đại tràng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
+    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
+    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
+    "answers": [
+      {
+        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
+        "correct": true
+      },
+      {
+        "text": "Vì sinh viên không thích nghỉ Tết.",
+        "correct": false
+      },
+      {
+        "text": "Vì sinh viên đang bận học kỳ cuối.",
+        "correct": false
+      },
+      {
+        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
         "correct": false
       }
     ]
@@ -4013,33 +4067,6 @@
       },
       {
         "text": "Dùng dấm để làm sạch kính",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bộ Quốc phòng đề xuất dừng hoạt động sản xuất tại cảng Cam Ranh khi có tình huống quốc phòng",
-    "content": "Bộ Quốc phòng Việt Nam đã đề xuất tạm dừng tất cả các hoạt động sản xuất, kinh doanh tại Cảng quốc tế Cam Ranh khi có tình huống về quốc phòng hoặc diễn tập quy mô lớn. Đề xuất này nhằm đảm bảo an toàn, bảo mật cho căn cứ quân sự Cam Ranh, được xác định là khu quân sự loại A và cần được quản lý đặc biệt. Việc tạm dừng hoạt động có thể dẫn đến thiệt hại kinh tế lớn, do đó Bộ Quốc phòng cũng đề xuất các biện pháp pháp lý để giảm thiểu hậu quả trong trường hợp xảy ra tranh chấp.",
-    "link": "https://tuoitre.vn/bo-quoc-phong-de-xuat-dung-hoat-dong-san-xuat-tai-cang-cam-ranh-khi-co-tinh-huong-quoc-phong-20250323133253648.htm",
-    "cat": "thoi-su",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bộ Quốc phòng đề xuất điều gì về Cảng quốc tế Cam Ranh?",
-    "answers": [
-      {
-        "text": "Tạm dừng hoạt động sản xuất, kinh doanh khi có tình huống quốc phòng",
-        "correct": true
-      },
-      {
-        "text": "Mở rộng hoạt động du lịch tại cảng",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường hợp tác quốc tế",
-        "correct": false
-      },
-      {
-        "text": "Giảm chi phí hoạt động tại cảng",
         "correct": false
       }
     ]
